--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'it.sephiroth.android.library.imagezoom:imagezoom:+'
+    compile 'com.alexvasilkov:gesture-views:2.1.1'
+    compile 'com.alexvasilkov:android-commons:1.2.4'
+    compile 'com.alexvasilkov:events:0.5.0-beta-1'
 }
